app/app.css
@import "tailwindcss";
@plugin '@tailwindcss/typography';

@theme {
  --font-brawler: "Brawler", serif;
  --font-source: "Source Serif 4", serif;
  --font-caption: "Old Standard TT", serif;
  --font-gothic: "UnifrakturMaguntia", cursive;
  --color-dark: #1a1a1a;
  --color-light: #f0f0f0;
  --color-crimson: #E8143C;
}

@utility duotone-crimson {
  filter: grayscale(80%) sepia(5%) hue-rotate(315deg) saturate(1.2) brightness(0.92);
}

@layer base {

  .prose p,
  .prose li {
    @apply text-dark text-justify text-lg;
  }

  .prose blockquote p {
    @apply font-brawler text-[1.8rem] italic border-y-2 border-black my-[30px] p-5 text-center leading-[1.2];
  }

  .prose blockquote {
    @apply border-none;
  }

  .prose h6 {
    @apply custom-caption relative -top-7.5;
  }

  .prose img {
    @apply w-full max-w-150 h-auto;
  }
}

@layer utilities {
  .prose h1 {
    @apply text-[56px] font-brawler mt-4 mb-5 my-0 font-bold tracking-tight;
  }

  .prose h3 {
    @apply text-2xl font-bold font-brawler mt-8 uppercase;
  }

  .prose a {
    @apply hover:text-crimson transition;
  }
}

@utility drop-cap {
  & p:first-of-type:not(blockquote p):not(.custom-caption)::first-letter {
    @apply float-left text-6xl pr-3 pt-1 leading-[0.8] font-gothic;
  }
}

@utility custom-caption {
  @apply font-caption italic text-neutral-600 pb-2 pt-1.5 border-b border-gray-300 text-sm;
}

html,
body {
  @apply bg-light text-dark font-source;
}

